--- a/01_input-checks.Rmd
+++ b/01_input-checks.Rmd
@@ -87,7 +87,8 @@ dt %>%
 
 dt_long_g <- make_long_geo(dt)
 
-write_parquet(dt_long_g, here::here("data-processed", "misto_long-geo.parquet"))
+write_parquet(dt_long_g%>% 
+                drop_na(value), here::here("data-processed", "misto_long-geo.parquet"))
 ```
 
 ### Existují projekty bez jakékoli idenfitikace místa?
@@ -97,7 +98,6 @@ dt_noplace <- dt_long_g %>%
   group_by(prj_id, op_id, p_nazev, p_sidlo_nazev, prj_nazev) %>% 
   summarise(all_na = all(is.na(value))) %>% 
   ungroup() 
-
 ```
 
 ```{r, message=F}
