--- a/03_explore.Rmd
+++ b/03_explore.Rmd
@@ -66,7 +66,7 @@ maxlevels <- dtl %>%
   select(prj_id, level, level_num, op_id) %>% 
   group_by(prj_id, op_id) %>% 
   summarise(maxlevel = max(level_num), minlevel = min(level_num), .groups = "drop") %>% 
-  mutate(across(c(maxlevel, minlevel), recode, !!!geounits_recoder)) %>% 
+  mutate(across(c(maxlevel, minlevel), recode, !!!geolevels_recoder)) %>% 
   ungroup()
 ```
 
@@ -127,7 +127,7 @@ dtl_for_upset <- dtl %>%
 ggplot2::update_geom_defaults("line", list(colour = "black"))
 ggplot(dtl_for_upset) +
   geom_bar(mapping = aes(x = geos, fill = op_id), position = "stack") +
-  scale_x_upset(order_by = "degree", sets = geounits) +
+  scale_x_upset(order_by = "degree", sets = geolevels) +
   # scale_y_continuous(limits = c(0, 6e4)) +
   # scale_y_log10(limits = c(1, 1e5), n.breaks = 10,
   #               labels = scales::label_number(1)) +
@@ -143,7 +143,7 @@ ggplot2::update_geom_defaults("line", list(colour = "black"))
 
 ggplot(dtl_for_upset) +
   geom_bar(mapping = aes(x = geos)) +
-  scale_x_upset(order_by = "degree", sets = geounits) +
+  scale_x_upset(order_by = "degree", sets = geolevels) +
   # scale_y_log10(n.breaks = 6, labels = scales::label_number(1)) +
   # scale_y_continuous(trans = scales::log_trans(), breaks = scales::pretty_breaks()) +
   ptrr::theme_ptrr(multiplot = T) +
@@ -156,7 +156,7 @@ ggplot2::update_geom_defaults("line", list(colour = "darkblue"))
 ```{r maxlevels-show, warning=F}
 maxlevels %>% 
   count(op_id, maxlevel) %>% 
-  mutate(maxlevel = fct_relevel(maxlevel, geounits)) %>% 
+  mutate(maxlevel = fct_relevel(maxlevel, geolevels)) %>% 
   spread(maxlevel, n)
 ```
 
